@@ -33,6 +33,10 @@ General Changes
 These entries apply to all relevant language mappings unless otherwise
 noted.
 
+- Fixed Glacier2 router bug which would cause the getCategoryForClient
+  method to throw Ice::NullHandleException if the server endpoints
+  were not set, instead it now returns an empty string.
+
 - Ice.NegativeSizeException has been removed. The run time now throws
   MarshalException or UnmarshalOutOfBoundsException instead.
 
